Welcome page changed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="shortcut icon" href="http://savepic.ru/8815812.png" type="image/png">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
@@ -20,7 +21,6 @@
             <li><a class="btn btn-default" href="/">Home</a></li>
             <li><a class="btn btn-default" href="#">Portfolio</a></li>
             <li><a class="btn btn-default" href="#">About me</a></li>
-            <li><a class="btn btn-default" href="#">Contact</a></li>
           </ul>
         </div>
       </div>  
@@ -34,10 +34,10 @@
       <div class="row">
         <div class="col-md-8">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">About me</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="https://vk.com/id5388900"><img src="http://savepic.ru/8810523.png" style="height: 24px;"/></a></li>
+            <li><a href="https://github.com/VitaHub"><img src="http://savepic.ru/8800282.png" style="height: 24px;"/></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100003445211869"><img src="http://savepic.ru/8814621.png" style="height: 24px;"/></a></li>
+            <li><a href="https://twitter.com/hubenko_vitaliy"><img src="http://savepic.ru/8821789.png" style="height: 24px;"/></a></li>
           </ul>
         </div>
         <div class="col-md-4">
