Portfolio page added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <img src="http://savepic.ru/8815812.png" style="height: 64px;"/>
+          <a href="/"><img src="http://savepic.ru/8815812.png" style="height: 64px;"/></a>
         </div>
         <div class="col-md-8">
           <ul class="navi pull-right">
             <li><a class="btn btn-default" href="/">Home</a></li>
-            <li><a class="btn btn-default" href="#">Portfolio</a></li>
+            <li><a class="btn btn-default" href="/portfolio">Portfolio</a></li>
             <li><a class="btn btn-default" href="#">About me</a></li>
           </ul>
         </div>
