--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -13,6 +13,7 @@
   background: url(http://ideatube.science/wp/GProxpt.jpg) no-repeat center center;
   background-size: cover;
   height: 540px;
+  padding-top: 50px;
 }
 
 .main h1 {
@@ -26,3 +27,16 @@
 	line-height: 520px;
 	padding-top: 150px;
 }
+
+.thumbnail {
+  padding: 20px;
+  background: transparent;
+  border: transparent;
+  }
+
+.main a {
+	background: transparent;
+	border: none;
+}
+
+.thumbnail:hover {padding: 0;}
