--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,5 +1,53 @@
-<div class="main">
+<div class="main portfolio">
 	<div class="container">
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="http://download.bitsdujour.com/software/screenshot/introduction-to-web-development-gqf5y.png" alt="123">
+      <div class="carousel-caption">
+         
+      </div>
+    </div>
+    <div class="item">
+      <img src="https://i.ytimg.com/vi/VBgW3GPhXPM/maxresdefault.jpg" alt="123">
+      <div class="carousel-caption">
+         
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://www.oscarbarajas.com/images/infographic.png" alt="123">
+      <div class="carousel-caption">
+         
+      </div>
+
+  </div>
+<div class="item">
+      <div style="height: 489px;"></div>
+      <div class="carousel-caption">
+         
+      </div>
+      
+  </div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
 		<div class="row">
   			<% @sites.each do |s| %>
     			<div class="col-md-3">
